--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">TestProjectNumber4</string>
     <string name="login">Login</string>
     <string name="password">Password</string>
+    <string name="logout">Logout</string>
 </resources>
